@@ -34,6 +34,7 @@ export(getManifest, getProbeInfo, getManifestInfo,
        getControlAddress, getControlTypes,
        getRed, getGreen, getMeth, getUnmeth,
        getBeta, getM, getCN, getMethSignal,
+       getOOB, getSnpBeta,
        dropMethylationLoci, getLocations, getAnnotation, mapToGenome,
        getIslandStatus, getProbeType, getSnpInfo, addSnpInfo,
        normalize.illumina.control, bgcorrect.illumina,
